@@ -28,6 +28,7 @@ class ezcomCommentsTestSuite extends ezpDatabaseTestSuite
         $this->addTestSuite( "ezcomCommentManagerTest" );
         $this->addTestSuite( "ezcomSubscriptionManagerTest" );
         $this->addTestSuite( "ezcomNotificationManagerTest" );
+        $this->addTestSuite( "ezcomUtilityTest" );
     }
 
     public static function suite()
